--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {},
     "autoload": {
        "psr-4": {
-          "Choult\\": "src/"
+          "Choult\\UTDR\\": "src/"
        }
     },
     "require-dev": {
