--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,4 +12,14 @@
       <directory>./test</directory>
     </testsuite>
   </testsuites>
+
+  <filter>
+    <whitelist processUncoveredFilesFromWhitelist="true">
+      <directory suffix=".php">src</directory>
+    </whitelist>
+  </filter>
+
+  <logging>
+    <log type="coverage-html" target="./build"/>
+  </logging>
 </phpunit>
